Add cmdlets: Copy/Move-RegKey Mount/Dismount-RegHive New-RegKey Remove-RegKey Remove-RegKeyProperty

--- a/PSRegistry/PSRegistry.csproj
+++ b/PSRegistry/PSRegistry.csproj
@@ -52,6 +52,7 @@
     <Compile Include="ImportRegKeyCommand.cs" />
     <Compile Include="MountRegHiveCommand.cs" />
     <Compile Include="MoveRegKeyCommand.cs" />
+    <Compile Include="NativeMethods.cs" />
     <Compile Include="NewRegKeyCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RemoveRegKeyCommand.cs" />
