--- a/PSRegistry/PSRegistry.csproj
+++ b/PSRegistry/PSRegistry.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PSRegistry</RootNamespace>
     <AssemblyName>PSRegistry</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -47,9 +48,7 @@
     <Compile Include="AddRegKeyPropertyCommand.cs" />
     <Compile Include="CopyRegKeyCommand.cs" />
     <Compile Include="DismountRegHiveCommand.cs" />
-    <Compile Include="ExportRegKeyCommand.cs" />
     <Compile Include="GetRegKeyCommand.cs" />
-    <Compile Include="ImportRegKeyCommand.cs" />
     <Compile Include="MountRegHiveCommand.cs" />
     <Compile Include="MoveRegKeyCommand.cs" />
     <Compile Include="NativeMethods.cs" />
@@ -57,8 +56,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RemoveRegKeyCommand.cs" />
     <Compile Include="RemoveRegKeyPropertyCommand.cs" />
-    <Compile Include="RenameRegKeyCommand.cs" />
-    <Compile Include="RenameRegKeyPropertyCommand.cs" />
     <Compile Include="SharedClasses.cs" />
     <Compile Include="Utility.cs" />
   </ItemGroup>
